--- a/QuAudioApp/app/src/main/res/values/strings.xml
+++ b/QuAudioApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">QuAudioApp</string>
+    <string name="app_name">QuAudio</string>
     <string name="action_settings">Settings</string>
 </resources>
